# AletasFT

./: .gitignore  Aletas.sln
Aletas/: AletaTask.hpp  Aletas.hpp  Aletas.vcxproj  Aletas.vcxproj.filters  GeratrizesTask.hpp  Main.cpp  geratriz_A.txt  geratriz_B.txt  geratriz_C.txt  geratriz_D.txt  geratriz_E.txt  geratriz_F.txt  geratriz_G.txt  geratriz_H.txt  geratriz_I.txt  geratriz_J.txt  geratriz_K.txt  geratriz_L.txt  geratriz_M.txt  quad.hpp
Resultados/: geratriz_D.txt  geratriz_I.txt  geratriz_K.txt  geratriz_M.txt
TrabalhoEscrito/: graf.xlsx
code/: CMakeLists.txt
code/include/: AletaTask.hpp  Aletas.hpp  FunDer.hpp  GeratrizesTask.hpp
code/src/: CMakeLists.txt  Main.cpp
include/: CMakeLists.txt  quad.hpp
plots/: geratriz_A.txt  geratriz_B.txt  geratriz_C.txt  geratriz_D.txt  geratriz_E.txt  geratriz_F.txt  geratriz_G.txt  geratriz_H.txt  geratriz_I.txt  geratriz_J.txt  geratriz_K.txt  geratriz_L.txt  geratriz_M.txt  notebook.ipynb
plots/aletas_env/Scripts/: Activate.ps1  activate  activate.bat
plots/datafiles/: geratriz_A.txt  geratriz_B.txt  geratriz_C.txt  geratriz_D.txt  geratriz_E.txt  geratriz_F.txt  geratriz_G.txt  geratriz_H.txt  geratriz_I.txt  geratriz_J.txt  geratriz_K.txt  geratriz_L.txt  geratriz_M.txt
python/plots/datafiles/: geratriz_C.txt  geratriz_E.txt  geratriz_F.txt  geratriz_J.txt  geratriz_L.txt
sympy/: sympy_gen_functions.py
